exports[`utils > _fnCore：標準化不拋錯 > _fnCoreToInteger() 1`] = `
{
  "0": "0",
  "1.9": "1",
  "4.8": "4",
  "-0.5": "0",
  "-1.5": "-1",
  "-0": "0",
  "NaN": "NaN",
  "Infinity": "Infinity",
  "-Infinity": "-Infinity",
  "-0.5 是 +0": true
}
`;

exports[`utils > _fnCore：標準化不拋錯 > fixZero()（num-is-zero）把 -0 轉回 +0 1`] = `
{
  "0": "0",
  "1": "1",
  "-0": "0",
  "-1": "-1",
  "NaN": "NaN",
  "Infinity": "Infinity",
  "-0 是 +0": true
}
`;

exports[`utils > assertLengthParams / assertRangeParams > assertLengthParams() 1`] = `
{
  "0": "throw RangeError: [_assertLengthParams] parameter out of range: len=0, expected: [1, 9007199254740991]",
  "5": "return 5",
  "MIN_LENGTH": "return 1",
  "MAX_LENGTH": "return 9007199254740991",
  "-1": "throw RangeError: [_assertLengthParams] parameter out of range: len=-1, expected: [1, 9007199254740991]",
  "2.5": "throw TypeError: [_assertLengthParams] parameter must be an integer: len=2.5",
  "自訂標籤": "throw RangeError: [myLabel] parameter out of range: len=0, expected: [1, 9007199254740991]"
}
`;

exports[`utils > assertLengthParams / assertRangeParams > assertRangeParams() 1`] = `
{
  "[2, 5)": "return {\\"start\\":2,\\"end\\":5}",
  "[-3, 3)": "return {\\"start\\":-3,\\"end\\":3}",
  "[5, 5)": "throw RangeError: [_assertRangeParams] range must not be empty: start=5, end=5",
  "[6, 5)": "throw RangeError: [_assertRangeParams] range must not be empty: start=6, end=5",
  "[1.5, 5)": "throw TypeError: [_assertRangeParams] parameter must be an integer: start=1.5",
  "[1, 5.5)": "throw TypeError: [_assertRangeParams] parameter must be an integer: end=5.5",
  "[0, MAX+1]": "throw RangeError: [_assertRangeParams] parameter out of range: end=9007199254740992, expected: [-9007199254740991, 9007199254740991]",
  "自訂標籤": "throw RangeError: [myLabel] range must not be empty: start=5, end=5"
}
`;

exports[`utils > calcExpectedValues* > calcExpectedValues() 1`] = `
{
  "[1, 4) 帶 params": "return {\\"params\\":{\\"foo\\":2},\\"range\\":{\\"start\\":1,\\"end\\":4},\\"size\\":3}",
  "[0, 2) 無 params": "return {\\"params\\":{},\\"range\\":{\\"start\\":0,\\"end\\":2},\\"size\\":2}",
  "[5, 5)": "throw RangeError: [_calcExpectedValues] range must not be empty: start=5, end=5",
  "[5, 5) 自訂標籤": "throw RangeError: [myLabel] range must not be empty: start=5, end=5"
}
`;

exports[`utils > calcExpectedValues* > calcExpectedValues() 的 params 以副本儲存 1`] = `
{
  "外部事後變更": {
    "a": 1
  },
  "values 可重複列舉": [
    [
      0,
      1
    ],
    [
      0,
      1
    ],
    [
      0,
      1
    ]
  ]
}
`;

exports[`utils > calcExpectedValues* > calcExpectedValuesByLength() 1`] = `
{
  "len=5": "return {\\"params\\":{\\"len\\":5},\\"range\\":{\\"start\\":0,\\"end\\":5},\\"size\\":5}",
  "len=3 的 values": [
    0,
    1,
    2
  ],
  "len=0": "throw RangeError: [_calcExpectedValuesByLength] parameter out of range: len=0, expected: [1, 9007199254740991]",
  "len=-1": "throw RangeError: [_calcExpectedValuesByLength] parameter out of range: len=-1, expected: [1, 9007199254740991]",
  "len=1.5": "throw TypeError: [_calcExpectedValuesByLength] parameter must be an integer: len=1.5"
}
`;

exports[`utils > calcExpectedValues* > calcExpectedValuesByRange() 1`] = `
{
  "[1, 5)": "return {\\"params\\":{\\"start\\":1,\\"end\\":5},\\"range\\":{\\"start\\":1,\\"end\\":5},\\"size\\":4}",
  "[0, 4)": "return {\\"params\\":{\\"start\\":0,\\"end\\":4},\\"range\\":{\\"start\\":0,\\"end\\":4},\\"size\\":4}",
  "[4, 5)": "return {\\"params\\":{\\"start\\":4,\\"end\\":5},\\"range\\":{\\"start\\":4,\\"end\\":5},\\"size\\":1}",
  "[5, 5)": "throw RangeError: [_calcExpectedValuesByRange] range must not be empty: start=5, end=5"
}
`;

exports[`utils > calcRangeSize / rangeValues > calcRangeSize() 以 end - start 直接計算 1`] = `
{
  "[0, 5)": 5,
  "[2, 5)": 3,
  "[3, 3)": 0,
  "[-3, 3)": 6
}
`;

exports[`utils > calcRangeSize / rangeValues > rangeValues() 生成器產出 1`] = `
{
  "[0, 4)": [
    0,
    1,
    2,
    3
  ],
  "[1, 5)": [
    1,
    2,
    3,
    4
  ],
  "[-2, 2)": [
    -2,
    -1,
    0,
    1
  ],
  "[3, 3)": [],
  "是生成器": true,
  "非陣列": false,
  "數量與 calcRangeSize 一致": true
}
`;

exports[`utils > createValuesValidator > check() 累計 total 與去重後的 size 1`] = `
{
  "trace": [
    "return 1",
    "return 1",
    "size=1, total=2",
    "return 2",
    "size=2, total=3"
  ],
  "state": {
    "label": "demo",
    "size": 2,
    "total": 3,
    "seen": [
      1,
      2
    ],
    "missing": [
      3,
      4
    ],
    "illegal": [],
    "verifyAllSeen": "throw RangeError: [demo] expected values never appeared: [3, 4]"
  }
}
`;

exports[`utils > createValuesValidator > seenValues 與 missingValues 互補 1`] = `
{
  "label": "demo",
  "size": 2,
  "total": 2,
  "seen": [
    1,
    3
  ],
  "missing": [
    2,
    4
  ],
  "illegal": [],
  "verifyAllSeen": "throw RangeError: [demo] expected values never appeared: [2, 4]"
}
`;

exports[`utils > createValuesValidator > 不同值數量超過合法值數量時拋出 1`] = `
{
  "trace": [
    "return 0",
    "throw RangeError: [guard] distinct value count exceeds expectation: 2 > 1"
  ]
}
`;

exports[`utils > createValuesValidator > 全部出現過時 verifyAllSeen() 不拋錯 1`] = `
{
  "label": "demo",
  "size": 4,
  "total": 4,
  "seen": [
    1,
    2,
    3,
    4
  ],
  "missing": [],
  "illegal": [],
  "verifyAllSeen": "return undefined"
}
`;

exports[`utils > createValuesValidator > 出現非法值時先記錄再拋出 1`] = `
{
  "trace": [
    "return 1",
    "throw RangeError: [demo] illegal value: 5, expected range: [1, 5)"
  ],
  "state": {
    "label": "demo",
    "size": 1,
    "total": 2,
    "seen": [
      1
    ],
    "missing": [
      2,
      3,
      4
    ],
    "illegal": [
      5
    ],
    "verifyAllSeen": "throw RangeError: [demo] expected values never appeared: [2, 3, 4]"
  }
}
`;

exports[`utils > createValuesValidator > 初始狀態 1`] = `
{
  "label": "demo",
  "size": 0,
  "total": 0,
  "seen": [],
  "missing": [
    1,
    2,
    3,
    4
  ],
  "illegal": [],
  "verifyAllSeen": "throw RangeError: [demo] expected values never appeared: [1, 2, 3, 4]"
}
`;

exports[`utils > createValuesValidator > 正常流程下 size 不會超過 expected.size 1`] = `
{
  "label": "demo",
  "size": 4,
  "total": 6,
  "seen": [
    1,
    2,
    3,
    4
  ],
  "missing": [],
  "illegal": [],
  "verifyAllSeen": "return undefined",
  "expected.size": 4
}
`;

exports[`utils > createValuesValidator > 非法值會中斷迴圈，無需跑完 testLimit 1`] = `
{
  "iterations": 1,
  "state": {
    "label": "demo",
    "size": 0,
    "total": 1,
    "seen": [],
    "missing": [
      1,
      2,
      3,
      4
    ],
    "illegal": [
      99
    ],
    "verifyAllSeen": "throw RangeError: [demo] expected values never appeared: [1, 2, 3, 4]"
  }
}
`;

exports[`utils > is* 與 assert* 各自可單獨取用 > assertFiniteNumber() 只拋錯，不做標準化 1`] = `
{
  "0": "return 0",
  "1.5": "return 1.5",
  "-9": "return -9",
  "NaN": "throw TypeError: [_assertFiniteNumber] parameter must be a finite number: value=NaN",
  "Infinity": "throw TypeError: [_assertFiniteNumber] parameter must be a finite number: value=Infinity",
  "-Infinity": "throw TypeError: [_assertFiniteNumber] parameter must be a finite number: value=-Infinity",
  "undefined": "throw TypeError: [_assertFiniteNumber] parameter must be a finite number: value=undefined",
  "自訂標籤": "throw TypeError: [myLabel] parameter must be a finite number: n=NaN"
}
`;

exports[`utils > is* 與 assert* 各自可單獨取用 > assertInRange() 只拋錯，不做標準化 1`] = `
{
  "3 in [0, 5)": "return 3",
  "5 in [0, 5)": "throw RangeError: [_assertInRange] illegal value: value=5, expected range: [0, 5)",
  "-1 in [0, 5)": "throw RangeError: [_assertInRange] illegal value: value=-1, expected range: [0, 5)",
  "預設標籤": "throw RangeError: [_assertInRange] illegal value: value=-1, expected range: [0, 5)",
  "自訂標籤": "throw RangeError: [myLabel] illegal value: len=5, expected range: [0, 5)"
}
`;

exports[`utils > is* 與 assert* 各自可單獨取用 > assertInteger() 只負責型別拋錯 1`] = `
{
  "3": "return 3",
  "1.5": "throw TypeError: [_assertInteger] parameter must be an integer: value=1.5",
  "NaN": "throw TypeError: [_assertInteger] parameter must be an integer: value=NaN",
  "Infinity": "throw TypeError: [_assertInteger] parameter must be an integer: value=Infinity",
  "自訂標籤": "throw TypeError: [myLabel] parameter must be an integer: n=1.5"
}
`;

exports[`utils > is* 與 assert* 各自可單獨取用 > assertIntegerInRange() = assertInteger + 範圍檢查 1`] = `
{
  "0 in [0, 10]": "return 0",
  "10 in [0, 10]": "return 10",
  "-1 in [0, 10]": "throw RangeError: [ctx] parameter out of range: n=-1, expected: [0, 10]",
  "11 in [0, 10]": "throw RangeError: [ctx] parameter out of range: n=11, expected: [0, 10]",
  "1.5 in [0, 10]": "throw TypeError: [ctx] parameter must be an integer: n=1.5",
  "NaN in [0, 10]": "throw TypeError: [ctx] parameter must be an integer: n=NaN",
  "SAFE_INTEGER_MIN": "return -9007199254740991",
  "SAFE_INTEGER_MAX": "return 9007199254740991"
}
`;

exports[`utils > is* 與 assert* 各自可單獨取用 > isFiniteNumber() 不拋錯 1`] = `
{
  "0": true,
  "1.5": true,
  "-9": true,
  "NaN": false,
  "Infinity": false,
  "-Infinity": false,
  "\\"1\\"": false,
  "null": false,
  "undefined": false
}
`;

exports[`utils > is* 與 assert* 各自可單獨取用 > isInRange() 不拋錯 1`] = `
{
  "0 in [0, 5)": true,
  "4 in [0, 5)": true,
  "5 in [0, 5)": false,
  "-1 in [0, 5)": false,
  "4.9 in [0, 5)": true,
  "-2 in [-3, 3)": true,
  "-3 in [-3, 3)": true,
  "3 in [3, 3)": false
}
`;

exports[`utils > is* 與 assert* 各自可單獨取用 > isIntegerInRange() 不拋錯 1`] = `
{
  "0 in [0, 10]": true,
  "10 in [0, 10]": true,
  "-1 in [0, 10]": false,
  "11 in [0, 10]": false,
  "1.5 in [0, 10]": false,
  "NaN in [0, 10]": false,
  "3 in [5, 2]": false
}
`;
